Name:                press
Version:             0.1.2
Synopsis:            Text template library targeted at the web / HTML generation
Description:         Press is a general purpose text templating engine that is targeted at generating HTML / Web content.  It uses the same syntax Django/Jinja templates use.
Category:            Text, Web
License:             GPL
License-File:        LICENSE
Author:              Brandon Bickford <bickfordb@gmail.com>
Maintainer:          bickfordb@gmail.com
Homepage:            http://github.com/bickfordb/text-press
Build-Type:          Simple
Cabal-Version:       >= 1.8

Source-Repository head
  Type: git
  Location: git://github.com/bickfordb/text-press.git

Library
  Build-Depends:
    base >= 4 && < 5,
    containers,
    mtl,
    parsec == 3.1.*,
    json == 0.7.*
  Exposed-Modules:
    Text.Press.Render,
    Text.Press.Parser,
    Text.Press.Tags,
    Text.Press.Run,
    Text.Press.Types

Test-Suite unit-tests-and-properties
  Type:              exitcode-stdio-1.0
  Main-Is:           PressTest.hs
  Hs-Source-Dirs:    tests
  Build-Depends:
    base,
    json,
    HUnit >= 1.2,
    QuickCheck >= 2.4,
    test-framework >= 0.6,
    test-framework-hunit >= 0.3,
    test-framework-quickcheck2 >= 0.2,
    press
